# taxonfinder

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  projectdescription.md  pyproject.toml  taxonfinder.config.json
.cursor/rules/: core-standards.mdc  docs-guidelines.mdc
.github/ai/rules/: core-standards.md  docs-guidelines.md
.github/workflows/: lint.yml  test.yml
data/txt_samples/: козуля.txt  улов.txt  улов_results.csv
docs/: data-and-cli.md  models.md  processing.md  readme-cli.md
prompts/: llm_enricher.txt  llm_extractor.txt
schemas/: config.schema.json  output-deduplicated.schema.json  output-full.schema.json  output.schema.json
taxonfinder/: __init__.py  checkpoint.py  cli.py  config.py  events.py  logging.py  merge.py  models.py  normalizer.py  pipeline.py  rate_limiter.py
taxonfinder/extractors/: __init__.py  gazetteer.py  latin.py  llm_client.py  llm_enricher.py  llm_extractor.py
taxonfinder/gazetteer/: __init__.py  storage.py
taxonfinder/loaders/: __init__.py  base.py  plain_text.py
taxonfinder/resolvers/: __init__.py  base.py  cache.py  identifier.py  inaturalist.py
tests/: test_cache.py  test_checkpoint.py  test_cli.py  test_config.py  test_first_case.py  test_gazetteer_extractor.py  test_gazetteer_storage.py  test_identifier.py  test_inaturalist.py  test_inaturalist_live.py  test_integration_pipeline_like.py  test_latin_extractor.py  test_llm_client.py  test_llm_enricher.py  test_llm_extractor.py  test_loaders.py  test_merge.py  test_models.py  test_normalizer.py  test_ollama_integration.py  test_ollama_prepare.py  test_pipeline.py
tests/data/: ambiguous_sentence.txt  ambiguous_sentence_output.json  negative_sentence.txt  negative_sentence_output.json  one_sentence.txt  one_sentence_output.json
