[project]
name = "taxonfinder"
version = "0.1.0"
description = "Extract taxon names from natural-language texts and resolve them via iNaturalist."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "spacy>=3.7",
    "pymorphy3",
    "httpx",
    "jsonschema",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]

[project.scripts]
taxonfinder = "taxonfinder.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
