[project]
name = "taxonfinder"
version = "0.1.0"
description = "Extract taxon names from natural-language texts and resolve them via iNaturalist."
readme = "projectdescription.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "spacy>=3.7",
    "pymorphy3",
    "httpx",
    "jsonschema",
    "click",
    "structlog",
    "python-dotenv",
    "charset-normalizer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
taxonfinder = "taxonfinder.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["taxonfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["taxonfinder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "ollama: integration tests that require a running Ollama server",
    "inaturalist_live: integration tests that call the live iNaturalist API",
]
